<resources>
    <string name="app_name">Contacts</string>
    <string name="vector_add_image">Add_button</string>
    <string name="save_button_text">SAVE</string>
    <string name="update_button_text">UPDATE</string>
    <string name="delete_button_text">DELETE</string>
    <string name="update_button">UPDATE</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="relation_hint">Relation</string>
</resources>